fixing unclickable logo on tablet and desktop versions

--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ h1, h2, h3, h4, .navbar, .btn, .jumbotron-caption, .price, .h1, .h2, .h3, .h4 {
 }
 
 .navbar-brand {
-  margin-left: 10px;
+  margin-left: 0px !important;
   padding: 15px 0;
 }
 
@@ -593,4 +593,11 @@ h2 {
 
 .footer .contact {
   font-size: 1.5em;
+}
+
+@media(min-width:767px){
+  #navbar {
+    width:auto;
+    float:right;
+  }
 }
